adding hero and styling hero

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
             <a href="#"><li>header link three</li></a>
         </ul>
     </div>
-    <div class="basic info">
-
+    <div class="basic_info">
+        <div class="text_area">
+        <div class="hero">this website is <br> awesome </div>
+        <div class="hero_sub">this website has some subtext that goes here under the main title</div>
+        <button>Sign up</button>
+        </div>
+        <img src="Untitled.png" height="150px" width="450px">
     </div>
 </body>
 
