--- a/index.html
+++ b/index.html
@@ -13,18 +13,68 @@
     <div class="header">
         <div class="logo">Header Logo</div>
         <ul class="link-list">
-            <a href="#"><li>header link one</li></a>
-            <a href="#"><li>header link two </li></a>
-            <a href="#"><li>header link three</li></a>
+            <a href="#">
+                <li>header link one</li>
+            </a>
+            <a href="#">
+                <li>header link two </li>
+            </a>
+            <a href="#">
+                <li>header link three</li>
+            </a>
         </ul>
     </div>
     <div class="basic_info">
         <div class="text_area">
-        <div class="hero">this website is <br> awesome </div>
-        <div class="hero_sub">this website has some subtext that goes here under the main title</div>
-        <button>Sign up</button>
+            <div class="hero">this website is <br> awesome </div>
+            <div class="hero_sub">this website has some subtext that goes here under the main title</div>
+            <button>Sign up</button>
         </div>
         <img src="Untitled.png" height="150px" width="450px">
+    </div>
+    <div class="information">
+        <div class="info_text">Some random informaton</div>
+        <div class="info_images">
+            <div class="images">
+                <img src="Untitled.png" height="100px" width=100px>
+                <div> this is some subtext under a image </div>
+            </div>
+            <div class="images">
+                <img src="Untitled.png" height="100px" width=100px>
+                <div> this is some subtext under a image </div>
+            </div>
+            <div class="images">
+                <img src="Untitled.png" height="100px" width=100px>
+                <div> this is some subtext under a image </div>
+            </div>
+            <div class="images">
+                <img src="Untitled.png" height="100px" width=100px>
+                <div> this is some subtext under a image </div>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="quote">
+        <div class="quote_text">This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All i know is that it looks nice.
+        </div>
+
+    </div>
+    <div class="sign_up_block">
+        <div class="text">
+            <div class="big_text">
+            Call to action! It's time!     
+            </div>
+            <div class="small_text">sing up for our product by clicking the button
+                right over there!
+            </div>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">
+        Copyright fwefwefwef 2021
     </div>
 </body>
 
